refactored with redux/toolkit

--- a/src/pages/PersonInfo/PersonInfo.module.scss
+++ b/src/pages/PersonInfo/PersonInfo.module.scss
@@ -1,6 +1,6 @@
-@use '../styles/_reset.scss';
-@use '../styles/_helpers.scss';
-@use '../styles/_vars.scss' as *;
+@use '../../styles/_reset.scss';
+@use '../../styles/_helpers.scss';
+@use '../../styles/_vars.scss' as *;
 
 .personInfo {
 	// background-color: yellow;
